cmake_minimum_required(VERSION 3.25)
project(dsa_in_c C)

set(CMAKE_C_STANDARD 99)

add_executable(dsa_in_c SimpleQ.c ArrayCopy.c)
add_executable(dsa_in_c2 List_Implementation.c)
add_executable(dsa_in_c3 SortedMatrix.c)
add_executable(dsa_in_c4 ListInsertion.c)
add_executable(dsa_in_list_impl LinkedListImpl.c)
add_executable(dsa_in_c6 SimpleQ.c)
add_executable(dsa_in_c_array_copy ArrayCopy.c)


